force-app/main/default/objects/Property_Tax_Rate_Factors__c/Property_Tax_Rate_Factors__c.object-meta.xml
<CustomObject>
    <description>to store the property tax rate factors for estimated property tax calculation in Originate</description>
    <label>Property Tax Rate Factor</label>
    <nameField>
        <displayFormat>PTRF-{0000}</displayFormat>
        <label>Property Tax Rate Factors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Tax Rate Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>