force-app/main/default/objects/Property_Tax_Rate_Factors__c/fields/Rate_Factor__c.field-meta.xml
<CustomField>
    <fullName>Rate_Factor__c</fullName>
    <label>Rate Factor</label>
    <precision>18</precision>
    <required>true</required>
    <scale>17</scale>
    <type>Number</type>
</CustomField>