force-app/main/default/objects/Property_Tax_Rate_Factors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Term__c</columns>
    <columns>Rate_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>